--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body {
     background-color: var(--background);
 }
 
+.inactive {
+    display: none;
+}
+
 /* header */ /* header */ /* header */
 /* header *//* header *//* header */
 /* header *//* header *//* header */
@@ -44,6 +48,9 @@ nav picture.nav__logo img {
     border-radius: 100px;
 }
 
+nav ul.nav__categories {
+    display: none;
+}
 
 nav ul.nav__categories li.nav__categories--item {
     list-style: none;
@@ -54,14 +61,136 @@ nav ul.nav__categories li.nav__categories--item a {
     text-decoration: none;
 }
 
+header nav figure img {
+    height: 70px;
+    border: 1px solid var(--primary-color-2);
+    border-radius: 333px;
+}
+
 nav picture.nav__car img {
     height: 60px;
-    width: auto;
+    width:
+     auto;
 }
+
+/* Mobile menu */
+.mobile-menu {
+    padding: 24px;
+    background-color: var(--background);
+    position: absolute;
+    top: 153px;
+    width: 100%;
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+  }
+  .mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+  }
+  .mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+  }
+  .mobile-menu ul li {
+    margin-bottom: 24px;
+  }
+  .email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+  }
+  .sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+  }
+
+/* car product detail */
+  
+.product-detail {
+    background-color: #8d4836;
+    width: 360px;
+    padding: 24px;
+    box-sizing: border-box;
+    position: absolute;
+    top: 135px;
+    right: 0;
+  }
+  .title-container {
+    display: flex;
+  }
+  .title-container img {
+    transform: rotate(180deg);
+    margin-right: 14px;
+  }
+  .title {
+    font-size: var(--lg);
+    font-weight: bold;
+  }
+  .order {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 16px;
+    align-items: center;
+    background-color: var(--text-input-field);
+    margin-bottom: 24px;
+    border-radius: 8px;
+    padding: 0 24px;
+  }
+  .order p:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+  }
+  .order p span:nth-child(1) {
+    font-size: var(--md);
+    font-weight: bold;
+  }
+  .order p:nth-child(2) {
+    text-align: end;
+    font-weight: bold;
+  }
+  .shopping-cart {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center;
+  }
+  .shopping-cart figure {
+    margin: 0;
+  }
+  .shopping-cart figure img {
+    width: 70px;
+    height: 70px;
+    border-radius: 20px;
+    object-fit: cover;
+  }
+  .shopping-cart p:nth-child(2) {
+    color: var(--very-light-pink);
+  }
+  .shopping-cart p:nth-child(3) {
+    font-size: var(--md);
+    font-weight: bold;
+  }
+  .primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
 
 /* main */ /* main */ /* main */ /* main */
 /* main */ /* main */ /* main */ /* main */ 
 /* main */ /* main */ /* main */ /* main */
+
+
 
 main.container {
     padding-bottom: 30px;
